2003-03-31  Larry Ewing  <lewing@ximian.com>

	* e-summary-factory.c: make the verbs static so they don't enter
	the global namespace.

2003-03-27  Ettore Perazzoli  <ettore@ximian.com>

	[#40358]

	* e-summary.c (e_summary_init): Likewise.

	* e-summary-weather.c (e_summary_weather_get_html): Likewise.
	(weather_make_html): Likewise.

	* e-summary-mail.c (e_summary_mail_generate_html): Fix so it
	handles the fact that the translated strings are already in UTF8.
	* e-summary-rdf.c (tree_walk): Likewise.
	(display_doc): Likewise.

2003-03-27  Not Zed  <NotZed@Ximian.com>

	** see bug #40141
	
	* e-summary-preferences.c (config_control_destroy_cb): Dont save
	prefs here, but restore the last saved.
	(config_control_apply_cb): save preferences here.

2003-03-26  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary-mail.c: New member physical_uri in struct
	ESummaryMailFolder.
	(new_folder_cb): Set it.
	(remove_folder_cb): Free it.
	(make_pretty_foldername): Rewritten to honour the display_name.
	[#7153]

	* e-summary.c (destroy): Only remove the source with ID
	tomorrow_timeout_id if the ID is nonzero.

2003-03-25  Dan Winship  <danw@ximian.com>

	* e-summary.c: Update for e_notice move
	(do_summary_print): Pass a parent_window to e_notice

2003-03-19  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary-calendar.c (generate_html): Add a %P in the strftime
	string for the case when the user wants am/pm format.  [#19957]

2003-03-13  Mike Kestner  <mkestner@ximian.com>

	* e-summary-preferences.c (fill_rdf_etable): pass FALSE for 
	expand to e_summary_shown_add_node.
	* e-summary-shown.c (make_table): ditto, set_expanded_default to FALSE.
	(add_node): only call e_tree_node_set_expanded is expanded != default.
	* e-summary-weather.c (*_fill_etable): pass FALSE for expand to 
	e_summary_shown_add_node.

2003-03-13  Ettore Perazzoli  <ettore@ximian.com>

	* e-summary-calendar.c (generate_html): Changed so its printf()s